--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <!-- Forgiveness Question -->
   <div class="forgive-question" id="forgiveQuestion">
-    Will you forgive me, my cutie pattoottiiee? 💕
+    Appologies accepted??, my cutie pattoottiiee? 💕
   </div>
 
   <!-- Yes / No Buttons -->
